# decathlon_support_system

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yaml  package.json
.envs/: backend.env
assets/: time_table.json
backend/: Cargo.toml  README.md  backend.dockerfile
backend/data_manipulation/: clean_dynamodb_database.py  create_excel_file_win.py  create_pdf_with_registered_athletes.py  timetable.json  upload_registered_athletes.py
backend/src/: api_server.rs  authenticate.rs  certificate_generation.rs  database.rs  lib.rs  notes.rs  teams.rs  time_planner.rs
backend/src/api_server/: achievement_routes.rs  athlete_routes.rs  auth_routes.rs  certificate_routes.rs  group_routes.rs  notes_routes.rs  team_routes.rs  time_planner_routes.rs
backend/src/certificate_generation/: achievements.rs  age_group_utils.rs  athletes.rs  groups.rs  pdf.rs
backend/src/certificate_generation/pdf/: certificates.rs  discipline_protocol.rs  group_results.rs  pdf_generation.rs  team_results.rs
backend/src/database/: db_errors.rs  dynamo_db.rs  in_memory_db.rs
backend/tests/: achievement.json  athlete.json  change_name.py  create_excel_file.py  group_store.json
backend/tests/old_data_tests/: Adressen_small.xls  create_excel_file_win.py  timetable.json  upload_old_data.py
deployment/: compose.yaml  init_ec2.sh
frontend/: frontend.dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
reverse_proxy/: nginx.conf  nginx.dockerfile
src/: api_server.rs  certificate_generation.rs  collections.rs  database.rs  lib.rs  main.rs  (+1 more)
(+100 files in other folders)
