[package]
name = "decathlon_support_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
actix-web = "4.4.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
printpdf = { version = "0.6.0" , features = ["embedded_images"]}
futures = "0.3.30"
bincode = "1.3"