[package]
name = "decathlon_support_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
actix-web = "4.4.1"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
printpdf = { version = "0.7.0" , features = ["embedded_images", "svg"]}
futures = "0.3.30"
bincode = "1.3" # only for InMemory DB
aws-sdk-dynamodb = { version = "1.25.0" }
aws-config = { features = ["behavior-version-latest"], version ="1.3.0" }
async-trait = "0.1.80"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"]}
actix-rt = "2.9.0"
tokio = "1.37.0"